--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,15 @@
     <script src="/app.js" type="text/javascript"></script>
   </head>
   <body>
+    <header id="topNav">
+      <p>Anthologie Palatine</p>
+      <div class="flexSpacer"></div>
+      <p>login (coming)</p>
+    </header>
+    <main>
+      <section id="entities">
 
+      </section>
+    </main>
   </body>
 </html>
