--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,7 +17,12 @@
     </header>
     <main>
       <section id="entities">
-
+        <header>
+          <h1>Entities</h1>
+        </header>
+        <section>
+          
+        </section>
       </section>
     </main>
   </body>
