--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,7 +21,23 @@
           <h1>Entities</h1>
         </header>
         <section>
-          
+
+        </section>
+      </section>
+      <section id="entity">
+        <header>
+          <h1>Entity</h1>
+        </header>
+        <section>
+
+        </section>
+      </section>
+      <section id="action">
+        <header>
+          <h1>action</h1>
+        </header>
+        <section>
+
         </section>
       </section>
     </main>
