--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -27,6 +27,9 @@ main {
 main > section{
   flex:0 0 25%;
 }
+main > section#action{
+  flex: 0 0 50%;
+}
 main > section > header > h1{
   padding:1em;
   font-weight: bold;
