--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,6 +20,16 @@
         <header>
           <h1>Entities</h1>
         </header>
+        <nav>
+          <article id="newEntity">
+            <p>
+              <i class="fa fa-plus-circle" aria-hidden="true"></i> New entity
+            </p>
+          </article>
+          <article>
+            <input type="text" name="name" value="" placeholder="find entity">
+          </article>
+        </nav>
         <section>
 
         </section>
