--- a/src/app/app.html
+++ b/src/app/app.html
@@ -27,7 +27,7 @@
             </p>
           </article>
           <article>
-            <input type="text" name="name" value="" placeholder="find entity">
+            <input type="text" name="name" value="" list="findEntity" placeholder="find entity">
           </article>
         </nav>
         <section>
