--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -28,7 +28,10 @@ main > section{
   flex:0 0 25%;
 }
 main > section#action{
-  flex: 0 0 50%;
+  max-width: 250px;
+}
+main > section#action{
+  flex:1 1 50%;
 }
 
 /* header section */
