--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -4,6 +4,11 @@
   flex:1 1 auto;
 }
 
+.clickMe {
+  cursor: pointer;
+}
+
+
 /* Top Nav */
 header#topNav{
   background-color: #366870;
@@ -53,7 +58,6 @@ main > section > nav > article > p {
   color:white;
   border-bottom: 1px solid #558187;
   border-right: 1px solid #558187;
-  cursor: pointer;
 }
 main > section > nav > article > input {
   display:block;
@@ -64,7 +68,6 @@ main > section > nav > article > input {
   border: 0;
   border-bottom: 1px solid #558187;
   border-right: 1px solid #558187;
-  cursor: pointer;
 }
 
 
@@ -73,9 +76,7 @@ main > section > section > article{
     text-align: left;
     border-right: 1px solid #558187;
     border-bottom: 1px solid #558187;
-    cursor: pointer;
 }
-
 
 /* entities quick select */
 #entities > section > article.hidden{
