--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,13 +21,13 @@
           <h1>Entities</h1>
         </header>
         <nav>
-          <article id="newEntity">
+          <article id="newEntity" class="clickMe">
             <p>
               <i class="fa fa-plus-circle" aria-hidden="true"></i> New entity
             </p>
           </article>
           <article>
-            <input type="text" name="entity" value="" id="findEntityInput" placeholder="find entity" autocomplete="off">
+            <input type="text" name="entity" value="" id="findEntityInput" placeholder="find entity" class="clickMe" autocomplete="off">
           </article>
         </nav>
         <section>
