--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -77,6 +77,9 @@ main > section > section > article{
     border-right: 1px solid #558187;
     border-bottom: 1px solid #558187;
 }
+main > section > section > article.shade{
+  background-color: #e3ebec;
+}
 
 /* entities quick select */
 #entities > section > article.hidden{
