start login process

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,7 +13,9 @@
     <header id="topNav">
       <p>Anthologie Palatine</p>
       <div class="flexSpacer"></div>
-      <p>login (coming)</p>
+      <div class="clickMe" id="logMeIn">
+        <p><i class="fa fa-user" aria-hidden="true"></i> login</p>
+      </div>
     </header>
     <main>
       <section id="entities">
