--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,7 @@
       <p>Anthologie Palatine</p>
       <div class="flexSpacer"></div>
       <div class="clickMe" id="logMeIn">
-        <p><i class="fa fa-user" aria-hidden="true"></i> login</p>
+        <p id="logMeInP"><i class="fa fa-user" aria-hidden="true"></i> login</p>
       </div>
     </header>
     <main>
