--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -38,7 +38,7 @@ header#topNav > p,header#topNav > div:not(.flexSpacer) {
 #logMeIn > nav > input {
   display: block;
   padding: 1em;
-  margin: 0.25em auto 0 0;
+  margin: 0.25em 0 0 auto;
   text-align: right;
 }
 
