--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -8,6 +8,15 @@
   cursor: pointer;
 }
 
+input.block.full{
+  display: block;
+  padding: 1em;
+  width: 100%;
+  margin-top: 0.25em;
+}
+input.block.full.right{
+  margin:0.25em 0 0 auto;
+}
 
 /* Top Nav */
 header#topNav{
