--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -14,7 +14,7 @@ input.block.full,textarea.block.full{
   width: 100%;
   margin-top: 0.25em;
 }
-input.block.full.right{
+input.block.right{
   margin:0.25em 0 0 auto;
 }
 
