--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -14,7 +14,10 @@ input.block.full,textarea.block.full{
   width: 100%;
   margin-top: 0.25em;
 }
+
 input.block.right{
+  display: block;
+  padding: 1em;
   margin:0.25em 0 0 auto;
 }
 
