--- a/src/app/app.html
+++ b/src/app/app.html
@@ -13,6 +13,26 @@
     <header id="topNav">
       <p>Anthologie Palatine</p>
       <div class="flexSpacer"></div>
+      <div class="clickMe" id="loadEntities">
+        <p><i class="fa fa-file-text-o" aria-hidden="true"></i>
+          Entities
+        </p>
+      </div>
+      <div class="clickMe" id="loadEntities">
+        <p><i class="fa fa-globe" aria-hidden="true"></i>
+          Langs
+        </p>
+      </div>
+      <div class="clickMe" id="loadAuthors">
+        <p><i class="fa fa-users" aria-hidden="true"></i>
+          Authors
+        </p>
+      </div>
+      <div class="clickMe" id="loadKeywords">
+        <p><i class="fa fa-hashtag" aria-hidden="true"></i>
+          keywords
+        </p>
+      </div>
       <div class="clickMe" id="logMeIn">
         <p id="logMeInP"><i class="fa fa-user" aria-hidden="true"></i> login</p>
       </div>
