--- a/src/app/side/app.css
+++ b/src/app/side/app.css
@@ -33,6 +33,9 @@ header#topNav > p,header#topNav > div:not(.flexSpacer) {
   flex:0 0 auto;
   padding:1em;
 }
+header#topNav > p,header#topNav > div:nth-child(1n+2) {
+  border-left: 1px solid #558187;
+}
 
 /* Login menu */
 #logMeIn{
