--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,7 +18,7 @@
           Entities
         </p>
       </div>
-      <div class="clickMe" id="loadEntities">
+      <div class="clickMe" id="loadLangs">
         <p><i class="fa fa-globe" aria-hidden="true"></i>
           Langs
         </p>
