--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,7 +20,7 @@
       </div>
       <div class="clickMe" id="loadLangs">
         <p><i class="fa fa-globe" aria-hidden="true"></i>
-          Langs
+          Languages
         </p>
       </div>
       <div class="clickMe" id="loadAuthors">
