--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="/app.js" type="text/javascript"></script>
+    <link rel="icon" href="favicon.ico" />
   </head>
   <body>
     <header id="topNav">
