--- a/src/app/lycee.html
+++ b/src/app/lycee.html
@@ -8,11 +8,12 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
     <script src="/app/side/lycee.js" type="text/javascript"></script>
+    <script src="/app/side/lycee.css" type="text/javascript"></script>
   </head>
   <body>
     <section id="full">
         <article id="container">
-          
+
         </article>
     </section>
   </body>
