--- a/src/app/side/lycee.css
+++ b/src/app/side/lycee.css
@@ -7,7 +7,7 @@
 #container{
   flex:0 0 auto;
 }
-.login > nav > input {
+.login > nav > input,.URI > nav > input {
   display: block;
   padding: 1em;
   width:20em;
