--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -13,3 +13,22 @@
   width:20em;
   text-align: center;
 }
+
+#error{
+  background-color: #c0392b;
+  color:white;
+}
+
+#waiting{
+  background-color: #2c3e50;
+  color:white;
+}
+
+#success{
+  background-color:#27ae60;
+  color:white;
+}
+
+#error > p, #waiting > p, #success > p{
+  margin:1em;
+}
