--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -26,11 +26,16 @@
 #success{
   background-color:#27ae60;
 }
+#backToUri{
+  background-color: #7f8c8d;
+  margin-top:2em;
+  cursor: pointer;
+}
 .message{
   color:white;
   margin-bottom: 2em;
 }
-#error > p, #waiting > p, #success > p{
+#error > p, #waiting > p, #success > p, #backToUri > p{
   margin:1em;
   width: 20em;
 }
