--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -26,7 +26,7 @@
 #success{
   background-color:#27ae60;
 }
-#backToUri{
+#cta{
   background-color: #7f8c8d;
   margin-top:2em;
   cursor: pointer;
@@ -35,7 +35,7 @@
   color:white;
   margin-bottom: 2em;
 }
-#error > p, #waiting > p, #success > p, #backToUri > p{
+#error > p, #waiting > p, #success > p, #cta > p{
   margin:1em;
   width: 20em;
 }
