--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -40,3 +40,22 @@
   margin:1em;
   width: 20em;
 }
+
+.entity h2,.entity h1{
+  margin: 0.5em 0;
+  text-align: center;
+  font-weight: bold;
+}
+.entity h1{
+  font-size: 1.3em;
+}
+.entity .translation .lang {
+  list-style: disc;
+  cursor:pointer;
+}
+.entity .translation .lang:not(:first-child){
+margin-top 0.5em;
+}
+.entity .translation .text{
+  display:none;
+}
