--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -76,3 +76,9 @@ h1{
 .entity .translation .text{
   display:none;
 }
+
+.newTranslation input,.newTranslation textarea{
+  display: block;
+  padding: 1em;
+  width:20em;
+}
