--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -75,6 +75,17 @@ h1{
 }
 .entity .translation .text{
   display:none;
+  position: relative;
+}
+.entity .alignThose
+{
+  padding: 0.5em;
+  background-color: #27ae60;
+  color: white;
+  cursor: pointer;
+  position: absolute;
+  right: -2em;
+  top: 0;
 }
 
 .newTranslation input,.newTranslation textarea{
