--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -64,14 +64,13 @@ h1{
 
 
 .entity .translation .lang {
-  list-style: disc;
   cursor:pointer;
 }
 .entity li:not(.text) {
   text-align: center;
 }
-.entity .translation .lang:not(:first-child){
-  margin-top : 0.5em;
+.entity .translation .lang{
+  margin-top : 1em;
 }
 .entity .translation .text{
   display:none;
