--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -1,9 +1,16 @@
 #full{
   min-height: 100vh;
   display: flex;
+  flex-direction:row;
+  align-items: center;
+  justify-content: center;
+}
+#main{
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 #container{
   flex:0 0 auto;
