--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -33,7 +33,7 @@
 #success{
   background-color:#27ae60;
 }
-#cta{
+#cta,#ctaSide{
   background-color: #7f8c8d;
   margin-top:2em;
   cursor: pointer;
