--- a/src/lycee/side/lycee.css
+++ b/src/lycee/side/lycee.css
@@ -5,12 +5,15 @@
   align-items: center;
   justify-content: center;
 }
-#main{
+#main,#aside{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
+}
+#aside.newTranslation {
+  margin-left: 2em;
 }
 #container{
   flex:0 0 auto;
